# teamctl

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  decisions.md  justfile  patterns.md
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  docs.yml  installer-smoke.yml  publish-crates.yml  release.yml
.team/: .env.example  README.md  team-compose.yaml
.team/projects/: teamctl.yaml
.team/roles/: dev.md  eng_lead.md  marketing.md  pm.md  qa.md
crates/team-bot/: Cargo.toml
crates/team-bot/src/: main.rs
crates/team-core/: Cargo.toml
crates/team-core/runtimes/: claude-code.yaml  codex.yaml  gemini.yaml
crates/team-core/src/: compose.rs  lib.rs  mailbox.rs  render.rs  runtimes.rs  supervisor.rs  validate.rs  worktree.rs  yaml_edit.rs
crates/team-mcp/: Cargo.toml
crates/team-mcp/src/: main.rs  rpc.rs  store.rs  tools.rs
crates/team-mcp/tests/: bridges.rs  channels.rs  channels_notify.rs  hitl.rs  reply_to_user.rs  stdio.rs
crates/teamctl/: Cargo.toml
crates/teamctl-ui/: Cargo.toml  README.md
crates/teamctl-ui/src/: app.rs  approvals.rs  compose.rs  data.rs  help.rs  layouts.rs  lib.rs  mailbox.rs  main.rs  onboarding.rs  pane.rs  splash.rs  statusline.rs  theme.rs  triptych.rs  tutorial.rs  watch.rs
crates/teamctl-ui/src/assets/: splash.txt
crates/teamctl-ui/tests/: interactions.rs  snapshots.rs
crates/teamctl-ui/tests/snapshots/: snapshots__approvals_modal_120x30.snap  snapshots__approvals_modal_multi_row_at_2of3_120x30.snap  snapshots__approvals_stripe_120x30.snap  snapshots__compose_modal_120x30.snap  snapshots__detail_four_split_mixed_120x30.snap  snapshots__detail_streams_120x30.snap  snapshots__detail_two_horizontal_splits_120x30.snap  snapshots__detail_two_vertical_splits_120x30.snap  snapshots__mailbox_channel_focused_120x30.snap  snapshots__mailbox_channel_with_rows_120x30.snap  snapshots__mailbox_first_layout_120x30.snap  snapshots__mailbox_inbox_120x30.snap  snapshots__mailbox_wire_with_rows_120x30.snap  snapshots__quit_confirm_120x30.snap  snapshots__roster_with_agents_120x30.snap  snapshots__splash_120x30.snap  snapshots__triptych_detail_focused_120x30.snap  snapshots__triptych_empty_120x30.snap  snapshots__wall_layout_120x30.snap
crates/teamctl/assets/: agent-wrapper.sh
crates/teamctl/assets/templates/_common/: .env.example  .gitignore
crates/teamctl/assets/templates/blank/: team-compose.yaml
crates/teamctl/assets/templates/blank/projects/: main.yaml
crates/teamctl/assets/templates/solo/: .env.example  README.md  team-compose.yaml
crates/teamctl/assets/templates/solo/projects/: main.yaml
crates/teamctl/assets/templates/solo/roles/: dev.md  manager.md
crates/teamctl/src/: main.rs
crates/teamctl/src/cmd/: approval.rs  attach.rs  bot.rs  bridge.rs  budget.rs  context.rs  down.rs  env.rs  exec.rs  gc.rs  init.rs  inspect.rs  logs.rs  mail.rs  mod.rs  reload.rs  rl_watch.rs  send.rs  snapshot.rs  status.rs  tail.rs  ui.rs  up.rs  update.rs  validate.rs  warn.rs
crates/teamctl/tests/: cli.rs
docs/: README.md  astro.config.mjs  getting-started.md  package-lock.json  package.json
docs/adrs/: 0001-sqlite-over-redis.md  0002-portable-supervisor.md  0002-systemd-over-pm2.md  0003-mcp-as-the-bus.md  0004-team-folder-and-management-ux.md
docs/concepts/: bridges.md  channels.md  hitl.md  interfaces.md  projects.md  rate-limits.md  runtimes.md  team-folder.md
docs/guides/: bridges-and-hitl.md  first-team.md  multi-runtime.md  operating-in-production.md  telegram-bot.md
docs/public/: _redirects  install
docs/reference/: runtimes-yaml.md  team-compose-yaml.md  teamctl.md
docs/src/components/landing/: Footer.astro  HeroAmbient.tsx  HeroCanvas.tsx  OrgChart.astro  QuietOutbound.astro  TelegramLoop.astro  WhyIBuiltThis.astro  hero-graph.js  hero.css
docs/src/content/docs/: coordination-policy.md  cost.md  (+2 more)
docs/src/lib/: motion.ts
docs/src/pages/: compare.astro  hero-preview.astro  index.astro
docs/src/styles/: landing.css
docs/tools/landing/: generate-hero-still.mjs
examples/hello-team/: README.md
examples/hello-team/.team/: team-compose.yaml
examples/hello-team/projects/: hello.yaml
examples/hello-team/roles/: manager.md
examples/indie-game-studio/: .env.example  README.md
examples/indie-game-studio/.team/: .env.example  team-compose.yaml
examples/indie-game-studio/projects/: studio.yaml
examples/indie-game-studio/roles/: designer.md  playtest_critic.md
examples/market-analysts/: .env.example  README.md
examples/market-analysts/.team/: .env.example  team-compose.yaml
examples/market-analysts/roles/: equities.md  quant_risk.md
examples/multi-agent/: README.md  team-compose.yaml
examples/multi-agent/projects/: swarm.yaml
examples/multi-runtime/: README.md  team-compose.yaml
examples/multi-runtime/projects/: mixed.yaml
examples/newsletter-office/: .env.example  README.md  team-compose.yaml
examples/newsletter-office/projects/: blog-site.yaml
examples/newsletter-office/roles/: fact_checker.md  frontend_dev.md  news_writer.md  seo_research.md  web_manager.md
examples/oss-maintainer/: README.md  team-compose.yaml
examples/oss-maintainer/.team/: .env.example  team-compose.yaml
examples/oss-maintainer/roles/: docs.md  maintainer.md
examples/solo-triage/: README.md
examples/solo-triage/.team/: .env.example  team-compose.yaml
examples/startup-team/: README.md  team-compose.yaml
examples/startup-team/.team/: .env.example  team-compose.yaml
examples/startup-team/roles/: eng_ic.md  eng_lead.md
examples/two-projects/: README.md  team-compose.yaml
examples/two-projects/projects/: blog.yaml  product.yaml
plugins/claude-code/: README.md  RULES.md  role-prompt-style.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: adjust.md  init.md  teamctl-init.md  teamctl.md
runtimes/: claude-code.yaml  codex.yaml  gemini.yaml
tools/: install.sh
(+54 files in other folders)
