[workspace]
resolver = "2"
members = [
    "crates/team-core",
    "crates/teamctl",
    "crates/team-mcp",
    "crates/team-bot",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/Alireza29675/teamctl"
homepage = "https://teamctl.run"
authors = ["Alireza Sheikholmolouki <alireza.sheikholmolouki@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
schemars = "0.8"
insta = { version = "1", features = ["yaml"] }
team-core = { path = "crates/team-core", version = "0.1.1" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# cargo-dist: cross-compile binaries for Linux + macOS (4 targets).
# See https://github.com/axodotdev/cargo-dist
[workspace.metadata.dist]
cargo-dist-version = "0.25.1"
ci = "github"
installers = ["shell", "homebrew"]
tap = "Alireza29675/homebrew-teamctl"
publish-jobs = ["homebrew"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
pr-run-mode = "plan"
install-path = "~/.local/bin"
# Allow the hand-edited `publish-crates` job in release.yml. Without this
# cargo-dist's Plan step rejects the workflow as out-of-date.
allow-dirty = ["ci"]

[profile.dist]
inherits = "release"
