[workspace]
resolver = "2"
members = [
    "crates/team-core",
    "crates/teamctl",
    "crates/team-mcp",
    "crates/team-bot",
    "crates/teamctl-ui",
]
# `teamctl-ui` is opt-in: it pulls a TUI dep tree (ratatui + crossterm)
# that the release flow + cargo-dist bundles don't need. Plain
# `cargo build` / `cargo test` target only the four default members
# below; the TUI crate is built with `-p teamctl-ui` or `--workspace`.
default-members = [
    "crates/team-core",
    "crates/teamctl",
    "crates/team-mcp",
    "crates/team-bot",
]

[workspace.package]
version = "0.6.1"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/Alireza29675/teamctl"
homepage = "https://teamctl.run"
authors = ["Alireza Sheikholmolouki <alireza.sheikholmolouki@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
schemars = "0.8"
team-core = { path = "crates/team-core", version = "0.6.1" }
blake3 = "1"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# cargo-dist: cross-compile binaries for Linux + macOS (4 targets).
# See https://github.com/axodotdev/cargo-dist
[workspace.metadata.dist]
cargo-dist-version = "0.25.1"
ci = "github"
# We hand-edit release.yml to keep `runs-on: ubuntu-24.04` (GitHub Actions
# retired ubuntu-20.04 in April 2026; cargo-dist 0.25.1 still defaults to
# 20.04). `allow-dirty = ["ci"]` tells `dist host` to skip the freshness
# check on the workflow file so releases don't fail on the diff.
allow-dirty = ["ci"]
installers = ["shell", "homebrew"]
tap = "Alireza29675/homebrew-teamctl"
publish-jobs = ["homebrew"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
pr-run-mode = "plan"
install-path = "~/.local/bin"
# cargo-dist 0.25.1's default runner labels are all retired by GitHub
# Actions: `ubuntu-20.04` and `macos-13` were both removed in 2025-2026.
# Jobs that target them sit queued forever. Override every target to a
# currently-supported runner image.
github-custom-runners = { x86_64-unknown-linux-gnu = "ubuntu-24.04", aarch64-unknown-linux-gnu = "ubuntu-24.04", x86_64-apple-darwin = "macos-14", aarch64-apple-darwin = "macos-14" }

# Cross-compile sysroot for the aarch64 Linux target. cc-rs (used by
# `ring`, `openssl-sys`, ...) auto-resolves `aarch64-linux-gnu-gcc`
# from PATH when the build target is aarch64-unknown-linux-gnu, but
# the GitHub Actions ubuntu-24.04 runner doesn't ship the cross-gcc.
# Without this, every cross-compile dies with
# `failed to find tool "aarch64-linux-gnu-gcc"`.
[workspace.metadata.dist.dependencies.apt]
gcc-aarch64-linux-gnu = { targets = ["aarch64-unknown-linux-gnu"] }

[profile.dist]
inherits = "release"
