[package]
name = "team-bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Telegram bot front-end for teamctl managers."

[[bin]]
name = "team-bot"
path = "src/main.rs"

[dependencies]
team-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
teloxide = { version = "0.13", features = ["macros"] }
