[package]
name = "team-bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Telegram bot front-end for teamctl managers."

[[bin]]
name = "team-bot"
path = "src/main.rs"

[dependencies]
team-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
# Use rustls (pure Rust TLS) instead of teloxide's default native-tls.
# native-tls drags in openssl-sys, which needs a target-arch libssl on
# the host *and* an `aarch64-linux-gnu-gcc` to even build openssl-src
# from source -- neither is available in the cargo-dist cross-build for
# aarch64-unknown-linux-gnu. rustls has zero C deps so it cross-compiles
# cleanly to every target dist supports.
teloxide = { version = "0.13", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
