[package]
name = "team-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared library for teamctl: YAML schema, validation, and artifact rendering."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
