[package]
name = "team-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server providing the shared agent mailbox for teamctl."

[[bin]]
name = "team-mcp"
path = "src/main.rs"

[dependencies]
team-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile = "3"
