[package]
name = "teamctl-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive TUI for teamctl — Triptych view, approvals modal, send-mail compose."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
dirs = "5"
team-core.workspace = true
rusqlite.workspace = true
notify.workspace = true

[dev-dependencies]
insta = "1"
tempfile = "3"
