[package]
name = "teamctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Declarative CLI for running persistent AI agent teams."
default-run = "teamctl"

[[bin]]
name = "teamctl"
path = "src/main.rs"

[dependencies]
team-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
